improve showfeature media slideshow

--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -483,7 +483,7 @@
             <ion-label>View Mode</ion-label>
             <ion-select [(ngModel)]="moment.matrix_number[i][0]">
               <ion-select-option [value]=0>Hide</ion-select-option>
-              <ion-select-option [value]=1>Grid</ion-select-option>
+              <ion-select-option [value]=1>Normal</ion-select-option>
               <ion-select-option [value]=2>Slideshow</ion-select-option>
             </ion-select>
           </ion-item>
