--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -615,7 +615,8 @@ app-showfeature {
   }
 
   .photo-split-view {
-    display: inline-block;
+    //display: inline-block;
+    min-width: 120px;
   }
 
   .icon-container {
