--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -620,7 +620,7 @@ app-showfeature {
   }
 
   .icon-container {
-    margin: 10px;
+    margin: 10px auto;
     max-width: 80px;
   }
 
@@ -631,7 +631,7 @@ app-showfeature {
 
   .photo-item {
     --size: 100%;
-    max-height: 280px;
+    max-height: 200px;
   }
 
   .thumbnail-item {
@@ -864,6 +864,52 @@ app-showfeature {
     .right {
       float: right;
     }
+  }
+
+  .monthview-day-headers {
+    width: calc(100% / 7);
+    float: left;
+    position: relative;
+    color: var(--ion-color-grey);
+    text-align: center;
+  }
+
+  .monthview-element {
+    width: calc(100% / 7);
+    float: left;
+    position: relative;
+    padding-bottom: calc(100% / 9);
+  }
+
+  .selected-date {
+    background-color: var(--ion-color-lightgrey);
+    border-radius: 50%;
+  }
+
+  .monthview-element .monthview-element-content {
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    text-align: center;
+    margin: 5px;
+    padding-top: 5px;
+    position: absolute;
+  }
+
+  .past-calendar-item {
+    background-color: var(--ion-color-grey);
+  }
+
+  .monthview-dot-container {
+    text-align: center;
+    display: inline-block;
+  }
+
+  .monthview-element-dot {
+    height: 5px;
+    width: 5px;
+    margin: 0px 0.5px 0px 0.5px;
+    border-radius: 50%;
+    background-color: var(--ion-color-primary);
   }
 
   .list-container {
