added id to profile-settings ion-item

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerLink]="['/app/user/profile']">
+            <ion-item id="userProfileSettings" [routerLink]="['/app/user/profile']">
               <ion-icon slot="start" name="cog"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
