--- a/src/app/pages/discover/preferences/preferences.page.html
+++ b/src/app/pages/discover/preferences/preferences.page.html
@@ -41,33 +41,38 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-      <ion-list-header>
-          <ion-label>Participants</ion-label>
-      </ion-list-header>
-        <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[2]">
-          <ion-thumbnail slot="start">
-            <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-            <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-          </ion-thumbnail>
-          <div>
-            <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
-            <ion-label>
-              <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
-            </ion-label>
-          </div>
+      <ion-card>
+        <ion-card-content>
+          <h3>Participants</h3>
+        </ion-card-content>
+      </ion-card>
+      <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[2]">
+        <ion-thumbnail slot="start">
+          <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
+          <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
+        </ion-thumbnail>
+        <div>
+          <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
+          <ion-label>
+            <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
+          </ion-label>
+        </div>
 
-            <ion-buttons *ngIf="!moment.response" slot="end">
-                <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
-                    <ion-icon name="cog"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-          <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
-          <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
-          <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
-        </ion-item>
-      <ion-list-header>
-          <ion-label>Leaders</ion-label>
-      </ion-list-header>
+          <ion-buttons *ngIf="!moment.response" slot="end">
+              <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
+                  <ion-icon name="cog"></ion-icon>
+              </ion-button>
+          </ion-buttons>
+        <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
+        <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
+        <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
+      </ion-item>
+
+      <ion-card>
+        <ion-card-content>
+          <h3>Leaders</h3>
+        </ion-card-content>
+      </ion-card>
       <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[4]">
           <ion-thumbnail slot="start">
               <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
@@ -89,9 +94,12 @@
           <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
           <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
       </ion-item>
-      <ion-list-header>
-          <ion-label>Organizers</ion-label>
-      </ion-list-header>
+
+      <ion-card>
+        <ion-card-content>
+          <h3>Organizers</h3>
+        </ion-card-content>
+      </ion-card>
       <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[3]">
           <ion-thumbnail slot="start">
               <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
@@ -113,9 +121,12 @@
           <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
           <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
       </ion-item>
-      <ion-list-header>
-          <ion-label>Unused</ion-label>
-      </ion-list-header>
+
+      <ion-card>
+        <ion-card-content>
+          <h3>Unused</h3>
+        </ion-card-content>
+      </ion-card>
       <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!(!moment.array_boolean[2] && !moment.array_boolean[3] && !moment.array_boolean[4])">
           <ion-thumbnail slot="start">
               <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
