--- a/src/app/pages/discover/preferences/preferences.page.html
+++ b/src/app/pages/discover/preferences/preferences.page.html
@@ -18,13 +18,10 @@
         </ion-row>
     </ion-grid>
   <ion-list *ngIf="organizer">
-    <ion-buttons class="ion-justify-content-center ion-margin-vertical">
-      <ion-button shape="round" fill="solid" color="primary" size="small" (click)="chooseOnboardingProcess($event)">Add Onboarding Process</ion-button>
-    </ion-buttons>
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-card>
+          <ion-card (click)="createMoment()">
             <ion-card-content class="onboarding-card">
               <img src="assets/img/plan.svg">
               <h4 class="text-center">Create your own</h4>
@@ -32,7 +29,7 @@
           </ion-card>
         </ion-col>
         <ion-col>
-          <ion-card>
+          <ion-card (click)="chooseOnboardingProcess()">
             <ion-card-content class="onboarding-card">
               <img src="assets/img/template.svg">
               <h4 class="text-center">Use a template</h4>
