--- a/src/app/pages/discover/preferences/preferences.page.html
+++ b/src/app/pages/discover/preferences/preferences.page.html
@@ -38,113 +38,105 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-      <ion-card>
-        <ion-card-content>
-          <h3>Participants</h3>
-        </ion-card-content>
+      <ion-item lines="none">Participants</ion-item>
+      <ion-card *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[2]">
+        <ion-item>
+            <ion-avatar slot="start">
+                <ion-img *ngIf="moment.assets?.length" [src]="moment.assets[0]"></ion-img>
+                  <ion-img *ngIf="!moment.assets.length" src="assets/img/group-default.png"></ion-img>
+            </ion-avatar>
+            <div>
+                <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
+                <ion-label>
+                    <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
+                </ion-label>
+            </div>
+
+            <ion-buttons *ngIf="!moment.response" slot="end">
+                <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
+                    <ion-icon name="cog"></ion-icon>
+                </ion-button>
+            </ion-buttons>
+            <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
+            <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
+            <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
+        </ion-item>
       </ion-card>
-      <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[2]">
-        <ion-thumbnail slot="start">
-          <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-          <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-        </ion-thumbnail>
-        <div>
-          <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
-          <ion-label>
-            <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
-          </ion-label>
-        </div>
 
-          <ion-buttons *ngIf="!moment.response" slot="end">
-              <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
-                  <ion-icon name="cog"></ion-icon>
-              </ion-button>
-          </ion-buttons>
-        <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
-        <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
-        <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
-      </ion-item>
+      <ion-item lines="none">Leaders</ion-item>
+      <ion-card *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[4]">
+          <ion-item>
+              <ion-avatar slot="start">
+                  <ion-img *ngIf="moment.assets?.length" [src]="moment.assets[0]"></ion-img>
+                  <ion-img *ngIf="!moment.assets.length" src="assets/img/group-default.png"></ion-img>
+              </ion-avatar>
+              <div>
+                  <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
+                  <ion-label>
+                      <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
+                  </ion-label>
+              </div>
 
-      <ion-card>
-        <ion-card-content>
-          <h3>Leaders</h3>
-        </ion-card-content>
+              <ion-buttons *ngIf="!moment.response" slot="end">
+                  <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
+                      <ion-icon name="cog"></ion-icon>
+                  </ion-button>
+              </ion-buttons>
+              <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
+              <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
+              <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
+          </ion-item>
       </ion-card>
-      <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[4]">
-          <ion-thumbnail slot="start">
-              <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-              <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-          </ion-thumbnail>
-          <div>
-              <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
-              <ion-label>
-                  <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
-              </ion-label>
-          </div>
 
-          <ion-buttons *ngIf="!moment.response" slot="end">
-              <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
-                  <ion-icon name="cog"></ion-icon>
-              </ion-button>
-          </ion-buttons>
-          <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
-          <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
-          <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
-      </ion-item>
+      <ion-item lines="none">Organizers</ion-item>
+      <ion-card *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[3]">
+          <ion-item>
+              <ion-avatar slot="start">
+                  <ion-img *ngIf="moment.assets?.length" [src]="moment.assets[0]"></ion-img>
+                  <ion-img *ngIf="!moment.assets.length" src="assets/img/group-default.png"></ion-img>
+              </ion-avatar>
+              <div>
+                  <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
+                  <ion-label>
+                      <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
+                  </ion-label>
+              </div>
 
-      <ion-card>
-        <ion-card-content>
-          <h3>Organizers</h3>
-        </ion-card-content>
+              <ion-buttons *ngIf="!moment.response" slot="end">
+                  <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
+                      <ion-icon name="cog"></ion-icon>
+                  </ion-button>
+              </ion-buttons>
+              <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
+              <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
+              <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
+          </ion-item>
       </ion-card>
-      <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!moment.array_boolean[3]">
-          <ion-thumbnail slot="start">
-              <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-              <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-          </ion-thumbnail>
-          <div>
-              <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
-              <ion-label>
-                  <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
-              </ion-label>
-          </div>
 
-          <ion-buttons *ngIf="!moment.response" slot="end">
-              <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
-                  <ion-icon name="cog"></ion-icon>
-              </ion-button>
-          </ion-buttons>
-          <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
-          <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
-          <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
-      </ion-item>
+      <ion-item lines="none">Unused</ion-item>
+      <ion-card *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!(!moment.array_boolean[2] && !moment.array_boolean[3] && !moment.array_boolean[4])">
+          <ion-item>
+              <ion-avatar slot="start">
+                  <ion-img *ngIf="moment.assets?.length" [src]="moment.assets[0]"></ion-img>
+                  <ion-img *ngIf="!moment.assets.length" src="assets/img/group-default.png"></ion-img>
+              </ion-avatar>
+              <div>
+                  <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
+                  <ion-label>
+                      <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
+                  </ion-label>
+              </div>
 
-      <ion-card>
-        <ion-card-content>
-          <h3>Unused</h3>
-        </ion-card-content>
+              <ion-buttons *ngIf="!moment.response" slot="end">
+                  <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
+                      <ion-icon name="cog"></ion-icon>
+                  </ion-button>
+              </ion-buttons>
+              <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
+              <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
+              <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
+          </ion-item>
       </ion-card>
-      <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')" [hidden]="!(!moment.array_boolean[2] && !moment.array_boolean[3] && !moment.array_boolean[4])">
-          <ion-thumbnail slot="start">
-              <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-              <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-          </ion-thumbnail>
-          <div>
-              <ion-note *ngIf="!organizer" style="font-style: italic" class="ion-margin-bottom">{{moment.program.matrix_string[0][0]}}</ion-note>
-              <ion-label>
-                  <h2 class="ion-text-wrap">{{moment.matrix_string[0][0]}}</h2>
-              </ion-label>
-          </div>
-
-          <ion-buttons *ngIf="!moment.response" slot="end">
-              <ion-button (click)="openOnboardingProcess($event, moment, 'edit')">
-                  <ion-icon name="cog"></ion-icon>
-              </ion-button>
-          </ion-buttons>
-          <ion-badge *ngIf="moment.response && moment.status === 'Incomplete'" color="warning" slot="end">{{moment.status}}</ion-badge>
-          <ion-badge *ngIf="moment.response && moment.status === 'Completed'" color="tertiary" slot="end">{{moment.status}}</ion-badge>
-          <!--<ion-badge slot="end">{{moment.members.length}}</ion-badge>-->
-      </ion-item>
     <ion-item-divider *ngIf="organizer" class="ion-text-wrap">
       Displaying {{moments.length}}&nbsp;<span *ngIf="moments.length <= 1"> Onboarding process</span><span *ngIf="moments.length > 1"> Onboarding processes</span>
     </ion-item-divider>
@@ -152,10 +144,10 @@
     <!--About Me-->
     <ion-list *ngIf="!organizer">
         <ion-item *ngFor="let moment of moments" (click)="openOnboardingProcess($event, moment, 'view')">
-            <ion-thumbnail slot="start">
-                <img *ngIf="moment.assets?.length" [src]="moment.assets[0]"/>
-                <img *ngIf="!moment.assets.length" src="assets/img/group-default.png"/>
-            </ion-thumbnail>
+            <ion-avatar slot="start">
+                <ion-img *ngIf="moment.assets?.length" [src]="moment.assets[0]"></ion-img>
+                  <ion-img *ngIf="!moment.assets.length" src="assets/img/group-default.png"></ion-img>
+            </ion-avatar>
             <div>
                 <ion-label *ngIf="!organizer" >
                     <h2 class="ion-text-wrap">{{moment.program.matrix_string[0][0]}}</h2>
